@@ -1,3 +1,9 @@
+2003-05-24 Damien Sandras  <dsandras@seconix.com>
+
+	* src/ldap_window.cpp: Added Rihgt-click delete.
+	
+	* src/videograbber.cpp: Reordered opening sequence.
+	
 2003-05-22 Damien Sandras  <dsandras@seconix.com>
 
 	* src/urlhandler.cpp: Changed string.
